# flicker

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  main.rs  theme.rs
src/plugin/: arr.rs  demo.rs  glances.rs  jax.rs  mod.rs  nzbget.rs  overseerr.rs  plex.rs  prometheus.rs  qbittorrent.rs  sabnzbd.rs  speedtest.rs  ssh_host.rs  tautulli.rs  uptime_kuma.rs  util.rs
src/ui/: jax.rs  mod.rs  modal.rs  panels.rs
