[package]
name = "flicker"
version = "0.1.0"
edition = "2021"
description = "The space between frames — a pluggable homelab operations console for the terminal."
license = "MIT"
authors = ["Scott Morris"]
repository = "https://github.com/liminal-hq/flicker"
rust-version = "1.87"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
rand = "0.8"

[profile.release]
lto = true
strip = true
